fix: variabili colori per dark mode

--- a/src/app/views/homepage/components/cake-makes/cake-makes.component.scss
+++ b/src/app/views/homepage/components/cake-makes/cake-makes.component.scss
@@ -6,7 +6,7 @@
     -moz-box-align: center;
     align-items: center;
     z-index: 1;
-    background: rgb(250, 249, 250) none repeat scroll 0% 0%;
+    background: var(--background-0);
     padding: 48px 0px;
 }
 
