--- a/src/app/views/homepage/components/win-millions/win-millions.component.scss
+++ b/src/app/views/homepage/components/win-millions/win-millions.component.scss
@@ -113,8 +113,8 @@
 
 .win-millions-inner {
     padding: 16px;
-    background: rgba(255, 255, 255, 0.6) none repeat scroll 0% 0%;
-    border: 1px solid rgb(231, 227, 235);
+    background: var(--background-6);
+    border: 1px solid var(--border);
     box-sizing: border-box;
     border-radius: 72px;
 }
